--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,8 @@
 *, *:after, *:before { vertical-align: top; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; -moz-osx-font-smoothing: subpixel-antialiased; -webkit-font-smoothing: subpixel-antialiased; -moz-font-smoothing: subpixel-antialiased; -ms-font-smoothing: subpixel-antialiased; -o-font-smoothing: subpixel-antialiased; }
 
-.i_bg { display: inline-block; width: 100%; *zoom: 1; position: relative; margin: 0px; padding: 0px; background-image: url("../img/w_bg.png"); background-repeat: no-repeat; background-attachment: fixed; background-position: 0 0; background-size: contain; }
+html { height: 100%; margin: 0; padding: 0; }
+
+.i_bg { display: inline-block; width: 100%; height: 100%; *zoom: 1; position: relative; margin: 0px; padding: 0px; background-image: url("../img/w_bg.png"); background-repeat: no-repeat; background-attachment: fixed; background-position: 0 0; background-size: contain; }
 .i_bg:after { display: table; content: ""; line-height: 0; clear: both; }
 @media screen and (max-width: 1399px) and (min-width: 450px) { .i_bg { background-size: 60% 100%; } }
 @media screen and (max-width: 449px) and (min-width: 0) { .i_bg { background-size: 107% 58%; background-position: 0 bottom; } }
