--- a/css/public.css
+++ b/css/public.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 *, *:after, *:before { vertical-align: top; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; -moz-osx-font-smoothing: subpixel-antialiased; -webkit-font-smoothing: subpixel-antialiased; -moz-font-smoothing: subpixel-antialiased; -ms-font-smoothing: subpixel-antialiased; -o-font-smoothing: subpixel-antialiased; }
 
 body { position: relative; display: inline-block; width: 100%; height: 100%; margin: 0; padding: 0; color: #5a5a5a; font-size: 12px; text-align: center; font-family: 'Roboto', sans-serif, "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif; }
@@ -6,129 +5,55 @@ body.bg_color { /* Permalink - use to edit and share this gradient: https://colo
 body.bg_color_p { /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#5eb8fe+0,63d9e3+100 */ background: #c5e3f8; /* Old browsers */ background: -moz-linear-gradient(top, rgba(94, 184, 254, 0.5) 0%, rgba(99, 217, 227, 0.5) 100%); /* FF3.6-15 */ background: -webkit-linear-gradient(top, rgba(94, 184, 254, 0.5) 0%, rgba(99, 217, 227, 0.5) 100%); /* Chrome10-25,Safari5.1-6 */ background: linear-gradient(to bottom, rgba(94, 184, 254, 0.5) 0%, rgba(99, 217, 227, 0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c5e3f8', endColorstr='#c7ebf2',GradientType=0 ); /* IE6-9 */ }
 
 .page_boxs { display: inline-block; width: 100%; max-width: 1100px; margin: 0 auto; background: url("../img/Oval01.png") left 40% no-repeat, url("../img/Oval02.png") right 50% no-repeat, url("../img/Oval03.png") 3% 110% no-repeat; }
-@media screen and (max-width: 449px) and (min-width: 0) { .page_boxs { background: url("../img/Oval01.png") left 45% no-repeat, url("../img/Oval02.png") right 70% no-repeat, url("../img/Oval03.png") 3% 110% no-repeat; } }
+@media screen and (max-width: 449px) and (min-width: 0) { .page_boxs { background: url("../img/Oval01.png") left 15% no-repeat, url("../img/Oval02.png") right 35% no-repeat, url("../img/Oval03.png") 1% 83% no-repeat; } }
 .page_boxs .page_box { display: inline-block; width: 100%; max-width: 990px; }
-@media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box { padding: 15px; } }
+@media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box { padding: 0 15px; } }
 .page_boxs .page_box header, .page_boxs .page_box main, .page_boxs .page_box footer { display: inline-block; width: 100%; }
 .page_boxs .page_box header { *zoom: 1; margin: 50px 0; }
 .page_boxs .page_box header:after { display: table; content: ""; line-height: 0; clear: both; }
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box header { margin: 15px 0 30px 0; } }
-.page_boxs .page_box header .link_home { display: inline-block; float: left; width: 100%; max-width: 191px; cursor: pointer; text-decoration: none; border: 0; }
-.page_boxs .page_box header .link_home img { display: inline-block; width: 100%; max-width: 191px; margin-top: 7px; }
 .page_boxs .page_box header nav { display: inline-block; float: right; }
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box header nav { display: none; } }
+.page_boxs .page_box header .m_Hamburg { display: none; }
+@media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box header .m_Hamburg { display: inline-block; float: right; width: 30px; height: 30px; color: #092058; font-size: 1.6rem; margin-top: 6px; } }
 .page_boxs .page_box main .cent_boxs { display: inline-block; width: 100%; background-color: white; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; -moz-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); padding: 35px 0; *zoom: 1; }
 .page_boxs .page_box main .cent_boxs:after { display: table; content: ""; line-height: 0; clear: both; }
 .page_boxs .page_box main .cent_boxs.cent_mobile { display: none; }
-@media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box main .cent_boxs.cent_mobile { display: inline-block; margin-bottom: 20px; height: 100px; } }
+@media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box main .cent_boxs.cent_mobile { display: inline-block; margin-bottom: 20px; padding: 20px 0; } }
 .page_boxs .page_box footer { *zoom: 1; margin: 20px 0; text-align: left; }
 .page_boxs .page_box footer:after { display: table; content: ""; line-height: 0; clear: both; }
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box footer { text-align: center; } }
 .page_boxs .page_box footer .footer_box { display: inline-block; float: right; }
 
-.cent_box { display: inline-block; float: left; padding: 0 35px; text-align: left; }
-@media screen and (max-width: 449px) and (min-width: 0) { .cent_box { padding: 0 20px; } }
-.cent_box.cent_box35 { width: 35%; }
-@media screen and (max-width: 449px) and (min-width: 0) { .cent_box.cent_box35 { width: 100%; } }
-.cent_box.cent_box65 { width: 65%; }
-@media screen and (max-width: 449px) and (min-width: 0) { .cent_box.cent_box65 { width: 100%; padding-top: 30px; } }
-.cent_box.cent_box50 { width: 50%; }
-@media screen and (max-width: 449px) and (min-width: 0) { .cent_box.cent_box50 { width: 100%; } }
+.menu_boxs { display: none; width: 100%; height: 100%; z-index: 3; position: fixed; top: 0; left: 0; background-color: white; -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; *zoom: 1; }
+.menu_boxs:after { display: table; content: ""; line-height: 0; clear: both; }
+.menu_boxs.hovermenu { display: inline-block; left: 0; }
+.menu_boxs.goback { left: 0; }
+.menu_boxs .icon-x { display: inline-block; width: 30px; height: 30px; font-size: 1.6rem; line-height: 30px; color: #2d4488; font-weight: 600; float: right; margin-top: 2px; }
+.menu_boxs .lastMenu, .menu_boxs .threeMenu { display: inline-block; width: 100%; padding: 20px 20px; border-top: 1px solid rgba(165, 165, 165, 0.5); text-align: center; font-size: 1.2rem; color: #092058; text-decoration: none; -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; font-weight: 600; }
+.menu_boxs .lastMenu:first-child, .menu_boxs .threeMenu:first-child { padding: 0 10px; }
+.menu_boxs .lastMenu:nth-child(7), .menu_boxs .threeMenu:nth-child(7) { border-bottom: 1px solid rgba(165, 165, 165, 0.5); }
+.menu_boxs .lastMenu.otherMenu, .menu_boxs .threeMenu.otherMenu { padding-left: 30px; border-bottom: 1px dotted white; }
+.menu_boxs .lastMenu.otherMenu:last-child, .menu_boxs .threeMenu.otherMenu:last-child { border-bottom: 1px solid white; }
+.menu_boxs .lastMenu:hover, .menu_boxs .threeMenu:hover { color: #2f31e5; }
+.menu_boxs .lastMenu.no_acc, .menu_boxs .threeMenu.no_acc { color: rgba(165, 165, 165, 0.5); }
+.menu_boxs .threeMenu:after { display: inline-block; content: '\e90a'; font-family: 'icomoon'; font-size: 1.2rem; float: right; }
+.menu_boxs .lastMenu_boxs { display: none; width: 100%; }
+.menu_boxs .lastMenu_boxs.showMenu { display: inline-block; }
 
-.all_box, .team_pic_box, .team_type_box { display: inline-block; width: 100%; }
-@media screen and (max-width: 449px) and (min-width: 0) { .all_box .team_pic_box, .team_pic_box .team_pic_box, .team_type_box .team_pic_box { width: 30%; float: left; }
-  .all_box .team_type_box, .team_pic_box .team_type_box, .team_type_box .team_type_box { width: 65%; float: right; } }
-
-.team_pic_box, .team_type_box { margin-top: 20px; }
-@media screen and (max-width: 449px) and (min-width: 0) { .team_pic_box, .team_type_box { margin-top: 0; } }
-
-.team_pic_box { text-align: center; }
-@media screen and (max-width: 449px) and (min-width: 0) { .team_pic_box { text-align: left; } }
-.team_pic_box img { display: inline-block; width: 100%; max-width: 95px; }
-
-input { outline: 0; }
-
-.toEnter { display: inline-block; width: 100%; padding: 8px 15px; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; }
-
-.inEnter { display: inline-block; width: calc(100% - 50px * 2); padding: 8px 15px 8px 0; border: 0; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; }
-.inEnter.addEnter { color: #d2d2d2; font-weight: 400; }
-
-.input_box { display: inline-block; width: 100%; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; margin-bottom: 18px; }
-
-.social_box { display: inline-block; width: 40px; height: 40px; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 40px; text-align: center; background-color: #092058; border: 1px solid #092058; margin-right: 15px; color: white; font-size: 1.2rem; }
-
-.borderGray { border: 1px solid rgba(165, 165, 165, 0.5); }
-
-.borderGray_left { border-left: 1px dotted rgba(165, 165, 165, 0.5); }
-@media screen and (max-width: 449px) and (min-width: 0) { .borderGray_left { border-top: 1px dotted rgba(165, 165, 165, 0.5); border-left: 0; } }
-
-.borderBlue { border: 1px solid #092058; }
-
-.btn_status_box { display: inline-block; cursor: pointer; width: 40px; height: 40px; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 40px; text-align: center; background-color: transparent; font-size: 1.2rem; float: right; }
-.btn_status_box.c_green { color: #6db53a; }
-.btn_status_box.c_gray { color: #a5a5a5; }
-
-a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; }
-
-.link_login { padding: 8px 14px; background-color: white; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; color: #2f31e5; font-size: 1rem; font-weight: 500; }
-.link_login:hover { background-color: #2f31e5; color: white; }
-
-.link_blueLine, .link_brightBlue { padding: 12px 16px; font-size: 1rem; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; }
-.link_blueLine:after, .link_brightBlue:after { display: inline-block; content: '\e906'; font-family: 'icon'; font-size: 1rem; margin-left: 3px; }
-@media screen and (max-width: 449px) and (min-width: 0) { .link_blueLine, .link_brightBlue { width: 90%; text-align: center; padding: 15px 16px; }
-  .link_blueLine:last-child, .link_brightBlue:last-child { margin-top: 15px; } }
-
-.link_blueLine { color: #2f31e5; background-color: white; border: 1px solid #2f31e5; }
-.link_blueLine:hover { color: white; background-color: #2f31e5; opacity: .9; }
-
-.link_brightBlue { color: white; background-color: #2f31e5; border: 1px solid #2f31e5; }
-.link_brightBlue:hover { color: white; background-color: #2f31e5; opacity: .8; }
-
-.web_menu { color: #092058; font-size: 1rem; font-weight: 400; line-height: 37px; }
-.web_menu:hover { text-decoration: underline; color: #2f31e5; }
-.web_menu:nth-child(3) { margin-right: 25px; }
-.web_menu:nth-child(3):after { display: none; }
-.web_menu.menu_gray { cursor: auto; color: #a5a5a5; }
-.web_menu.menu_gray:hover { text-decoration: none; }
-.web_menu:after { display: inline-block; content: '・'; margin: 0 10px; }
-
-.footer_menu { color: #092058; font-size: .9rem; font-weight: 300; }
-@media screen and (max-width: 449px) and (min-width: 0) { .footer_menu { display: none; } }
-.footer_menu:after { display: inline-block; content: '|'; margin: 0 10px; color: #092058; }
-.footer_menu:hover { color: #2f31e5; }
-.footer_menu:last-child:after { display: none; }
-
-.team_title { display: inline-block; width: 100%; color: #092058; font-size: 1.4rem; font-weight: 700; padding-bottom: 10px; }
-
-.order_left { float: left; }
-
-.order_right { float: right; }
-
-h1, h2, h3 { color: white; margin: 5px 0; }
-
-h1, h2 { font-size: 4rem; text-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3); text-shadow: 2px 4px 5px 2px rgba(0, 0, 0, 0.3); }
-@media screen and (max-width: 449px) and (min-width: 0) { h1, h2 { font-size: 2.8rem; } }
-
-h1 { font-weight: 900; }
-
-h2 { font-weight: 400; margin-top: 25%; }
-@media screen and (max-width: 449px) and (min-width: 0) { h2 { margin-top: 10%; } }
-
-h3 { font-size: 1.3rem; font-weight: 300; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); text-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.3); }
-@media screen and (max-width: 449px) and (min-width: 0) { h3 { font-size: 1.2rem; margin-bottom: 20px; } }
-
-p { display: inline-block; padding: 0; margin: 0; }
-
-.footer_type { color: #092058; font-size: .9rem; font-weight: 300; }
-
-.team_type { display: inline-block; width: 100%; color: #092058; font-size: 1.2rem; font-weight: 400; }
-
-.bright_type13 { color: #2f31e5; font-size: 1.2rem; font-weight: 500; }
-
-.magTop45 { margin-top: 45px; }
-@media screen and (max-width: 449px) and (min-width: 0) { .magTop45 { margin-top: 0; } }
-
-.magRight20 { margin-right: 20px; }
-@media screen and (max-width: 449px) and (min-width: 0) { .magRight20 { margin-right: 0; } }
-
-.padTB15 { padding: 15px 0; }
+.modal { display: inline-block; position: fixed; z-index: 1; padding-top: 30%; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(33, 33, 33, 0.8); }
+@media screen and (max-width: 449px) and (min-width: 0) { .modal { padding-left: 20px; padding-right: 20px; padding-top: 10%; } }
+.modal .modal_boxs { display: inline-block; width: 100%; max-width: 800px; background-color: white; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; padding: 20px 30px; *zoom: 1; }
+.modal .modal_boxs:after { display: table; content: ""; line-height: 0; clear: both; }
+@media screen and (max-width: 449px) and (min-width: 0) { .modal .modal_boxs { max-width: auto; padding: 20px 20px; margin-bottom: 30px; } }
+.modal .modal_boxs .close { font-size: 2rem; font-weight: bold; cursor: pointer; color: #092058; float: right; }
+.modal .modal_boxs .lightbox_done { display: inline-block; font-size: 1.2rem; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; background-color: #092058; color: white; padding: 8px 15px; float: right; cursor: pointer; }
+@media screen and (max-width: 449px) and (min-width: 0) { .modal .modal_boxs .lightbox_done { font-size: 1rem; } }
+.modal .modal_boxs .modal_box { display: inline-block; width: 100%; margin-top: 30px; *zoom: 1; }
+.modal .modal_boxs .modal_box:after { display: table; content: ""; line-height: 0; clear: both; }
+.modal .modal_boxs .modal_box .check_social { display: inline-block; width: calc(100% / 6); float: left; margin-bottom: 30px; }
+@media screen and (max-width: 449px) and (min-width: 0) { .modal .modal_boxs .modal_box .check_social { width: calc(100% / 3); } }
+.modal .modal_boxs .modal_box input[type="checkbox"] { display: inline-block; width: 100px; height: 100px; -moz-border-radius: 50px; -webkit-border-radius: 50px; border-radius: 50px; outline: 0; border: 0; -webkit-appearance: none; vertical-align: middle; margin-top: 0; padding: 5px 10px; background: rgba(9, 32, 88, 0.5); color: white; font-size: 3rem; text-align: center; line-height: 90px; }
+@media screen and (max-width: 449px) and (min-width: 0) { .modal .modal_boxs .modal_box input[type="checkbox"] { width: 80px; height: 80px; line-height: 70px; font-size: 2.6rem; } }
+.modal .modal_boxs .modal_box input[type="checkbox"]:checked { background: #092058; }
+.modal .modal_boxs .modal_box input[type="checkbox"]:checked:after { content: ''; top: 50%; left: 50%; position: absolute; background: transparent; border-top: none; border-right: none; }
