--- a/scss/link.scss
+++ b/scss/link.scss
@@ -3,13 +3,14 @@
 // 顏色
 $deep_blue: rgba(9, 32, 88, 1); // 主色・深藍
 $deep_blue2: rgba(9, 32, 88, .8); // 主色・深藍(透明)
-$deep_blue3: rgba(9, 32, 88, .5); // 主色・深藍(透明)
+$deep_blue3: rgba(133, 142, 166, 1.00); // 主色・深藍(透明1/2)
 $bright_blue: rgba(47, 49, 229, 1); // 主色・亮藍
 $gray: rgba(165, 165, 165, 1.00); // 主色・輔助灰
 $gray2: rgba(165, 165, 165, .5); // 主色・輔助灰(透明)
 $green: rgba(109, 181, 58, 1.00); // 輔助色・綠色
 $gray_blue: rgba(131, 143, 171, 1.00); // 輔助色・灰藍色
 $light_blue: rgba(0, 149, 217, 1.00); // 輔助色・淺藍色
+$orange: rgba(255, 152, 0, 1.00); // 輔助色・橘色
 
 
 // 連結
@@ -59,7 +60,7 @@ a {
 }
 
 .link_blueLine, .link_brightBlue, .link_gray {
-  padding: 12px 16px;
+  padding: 12px 20px;
   font-size: 1rem;
   @include border-radius(30px);
 
@@ -77,10 +78,6 @@ a {
     width: 90%;
     text-align: center;
     padding: 15px 16px;
-
-    &:last-child {
-      margin-top: 15px;
-    }
   }
 }
 
@@ -184,6 +181,12 @@ a {
   padding-bottom: 10px;
 }
 
+.no_event {
+  color: $gray;
+  pointer-events: none;
+  cursor: default;
+}
+
 .m_title_type {
   font-size: 1.2rem;
   font-weight: 700;
@@ -197,6 +200,31 @@ a {
   color: $gray_blue;
 }
 
+.link_icon {
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid $bright_blue;
+  @include border-radius(20px);
+  color: $bright_blue;
+  font-size: 1rem;
+  line-height: 28px;
+  float: right;
+  text-align: center;
+  margin-top: -5px;
+
+  &.link_iocn_gray {
+    color: $gray;
+    border: 1px solid $gray;
+  }
+}
+
+.no_event_icon {
+  color: $gray;
+  border: 1px solid $gray;
+  pointer-events: none;
+  cursor: default;
+}
 
 
 // 按鈕
@@ -223,6 +251,12 @@ button {
 
   &.c_gray {
     color: $gray;
+
+    &.member {
+      &:hover {
+        color: $orange;
+      }
+    }
   }
 }
 
@@ -242,3 +276,22 @@ button {
   //   float: inherit;
   // }
 }
+
+.btn_done {
+  display: inline-block;
+  font-size: 1.2rem;
+  @include border-radius(20px);
+  background-color: $deep_blue;
+  color: white;
+  padding: 8px 15px;
+  float: right;
+  cursor: pointer;
+  border: 0;
+
+  @include range-width(0, 450px) {
+    font-size: 1rem;
+  }
+}
+
+
+
