--- a/css/icon.css
+++ b/css/icon.css
@@ -1,5 +1,7 @@
-@font-face { font-family: "icon"; src: url('../font/icomoon/fonts/icomoon.eot?1598443654') format('embedded-opentype'), url('../font/icomoon/fonts/icomoon.woff?1598443654') format('woff'), url('../font/icomoon/fonts/icomoon.ttf?1598443654') format('truetype'), url('../font/icomoon/fonts/icomoon.svg?1598443654') format('svg'); }
+@font-face { font-family: "icon"; src: url('../font/icomoon/fonts/icomoon.eot?1598708938') format('embedded-opentype'), url('../font/icomoon/fonts/icomoon.woff?1598708938') format('woff'), url('../font/icomoon/fonts/icomoon.ttf?1598708938') format('truetype'), url('../font/icomoon/fonts/icomoon.svg?1598708938') format('svg'); }
 *[class^="icon-"]:before, *[class*=" icon-"]:before { font-family: "icon"; speak: none; font-style: normal; font-weight: normal; font-variant: normal; }
+
+.icon-bubble_chart---material:before { content: "\e91f"; }
 
 .icon-email:before { content: "\e900"; }
 
@@ -45,7 +47,7 @@
 
 .icon-chain:before { content: "\f0c1"; }
 
-.icon-link:before { content: "\f0c1"; }
+.icon-link:before { content: "\f0c1";}
 
 .icon-error:before { content: "\e91e"; }
 
@@ -64,5 +66,7 @@
 .icon-menu:before { content: "\e907"; }
 
 .icon-plus:before { content: "\e908"; }
+
+.icon-search:before { content: "\e920"; }
 
 .icon-x:before { content: "\e909"; }
