--- a/css/link.css
+++ b/css/link.css
@@ -11,10 +11,9 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 .link_login { padding: 8px 14px; background-color: white; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; color: #2f31e5; font-size: 1rem; font-weight: 500; }
 .link_login:hover { background-color: #2f31e5; color: white; }
 
-.link_blueLine, .link_brightBlue, .link_gray { padding: 12px 16px; font-size: 1rem; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; }
+.link_blueLine, .link_brightBlue, .link_gray { padding: 12px 20px; font-size: 1rem; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; }
 .link_blueLine.have_mark:after, .link_brightBlue.have_mark:after, .link_gray.have_mark:after { display: inline-block; content: '\e906'; font-family: 'icon'; font-size: 1rem; margin-left: 3px; }
-@media screen and (max-width: 449px) and (min-width: 0) { .link_blueLine, .link_brightBlue, .link_gray { width: 90%; text-align: center; padding: 15px 16px; }
-  .link_blueLine:last-child, .link_brightBlue:last-child, .link_gray:last-child { margin-top: 15px; } }
+@media screen and (max-width: 449px) and (min-width: 0) { .link_blueLine, .link_brightBlue, .link_gray { width: 90%; text-align: center; padding: 15px 16px; } }
 
 .link_blueLine { color: #2f31e5; background-color: white; border: 1px solid #2f31e5; }
 .link_blueLine:hover { color: white; background-color: #2f31e5; opacity: .9; }
@@ -40,14 +39,25 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 
 .team_title { display: inline-block; color: #092058; font-size: 1.4rem; font-weight: 700; padding-bottom: 10px; }
 
+.no_event { color: #a5a5a5; pointer-events: none; cursor: default; }
+
 .m_title_type { font-size: 1.2rem; font-weight: 700; color: #092058; float: left; }
 
 .m_top_type { font-size: 1.2rem; font-weight: 400; color: #838fab; }
+
+.link_icon { width: 30px; height: 30px; background-color: transparent; border: 1px solid #2f31e5; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; color: #2f31e5; font-size: 1rem; line-height: 28px; float: right; text-align: center; margin-top: -5px; }
+.link_icon.link_iocn_gray { color: #a5a5a5; border: 1px solid #a5a5a5; }
+
+.no_event_icon { color: #a5a5a5; border: 1px solid #a5a5a5; pointer-events: none; cursor: default; }
 
 button { display: inline-block; outline: 0; cursor: pointer; }
 
 .btn_status_box { width: 40px; height: 40px; border: 0; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 40px; text-align: center; background-color: transparent; font-size: 1.2rem; float: right; }
 .btn_status_box.c_green { color: #6db53a; }
 .btn_status_box.c_gray { color: #a5a5a5; }
+.btn_status_box.c_gray.member:hover { color: #ff9800; }
 
 .btn_add { width: 40px; height: 40px; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 36px; text-align: center; background-color: transparent; border: 1px solid #2f31e5; color: #2f31e5; font-size: 1.4rem; }
+
+.btn_done { display: inline-block; font-size: 1.2rem; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; background-color: #092058; color: white; padding: 8px 15px; float: right; cursor: pointer; border: 0; }
+@media screen and (max-width: 449px) and (min-width: 0) { .btn_done { font-size: 1rem; } }
