--- a/css/type.css
+++ b/css/type.css
@@ -15,7 +15,14 @@ h3 { font-size: 1.3rem; font-weight: 300; text-shadow: 2px 2px 4px rgba(0, 0, 0,
 
 p { display: inline-block; padding: 0; margin: 0; }
 
+.icon-chain { transform: rotateY(180deg); }
+
 .footer_type { color: #092058; font-size: .9rem; font-weight: 300; }
+
+.note_type { display: inline-block; color: #092058; font-size: 1rem; }
+@media screen and (max-width: 449px) and (min-width: 0) { .note_type { font-size: .9rem; } }
+
+.lineHeight45 { line-height: 45px; }
 
 .team_type { display: inline-block; width: 100%; color: #092058; font-size: 1.2rem; font-weight: 400; }
 @media screen and (max-width: 449px) and (min-width: 0) { .team_type { font-size: 1rem; } }
@@ -24,24 +31,44 @@ p { display: inline-block; padding: 0; margin: 0; }
 
 .type_uppercase { text-transform: uppercase; }
 
-input { outline: 0; }
+.type_data_title { font-size: 1.4rem; font-weight: 700; color: #2f31e5; }
 
-.toEnter { display: inline-block; width: 100%; padding: 8px 15px; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; }
+input { outline: 0; background-color: transparent; }
 
-.inEnter { display: inline-block; width: calc(100% - 50px * 2); padding: 8px 15px 8px 0; border: 0; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; }
+.toEnter { display: inline-block; width: 100%; padding: 8px 15px; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; overflow: hidden; }
+
+.inEnter { display: inline-block; width: calc(100% - 50px * 2); padding: 8px 15px 8px 0; border: 0; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; overflow: hidden; }
+.inEnter.in_all { width: calc(100% - 70px); padding: 0; line-height: 40px; }
 
 .addEnter { color: #d2d2d2; font-weight: 400; }
 
 .input_box { display: inline-block; width: 100%; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; margin-bottom: 18px; }
+.input_box.input_box_top15 { margin-top: 15px; margin-bottom: 5px; }
 
-.social_box { display: inline-block; width: 40px; height: 40px; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 40px; text-align: center; background-color: #092058; border: 1px solid #092058; margin-right: 15px; color: white; font-size: 1.2rem; }
+.social_box { display: inline-block; width: 40px; height: 40px; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 40px; text-align: center; background-color: #092058; border: 1px solid #092058; margin-right: 9px; color: white; font-size: 1.2rem; }
+.social_box.member_box { background-color: #858ea6; border: 1px solid #858ea6; }
+.social_box.serch_box { background-color: transparent; border: 0; color: #2f31e5; }
 
-.borderGray { border: 1px solid rgba(165, 165, 165, 0.5); }
+.borderGray_TD { border-top: 1px dotted rgba(165, 165, 165, 0.5); border-bottom: 1px dotted rgba(165, 165, 165, 0.5); margin: 20px 0; }
+
+.borderGray_D { border-bottom: 1px dotted rgba(165, 165, 165, 0.5); margin: 0 0 20px 0; }
+
+.borderGray_T { border-top: 1px dotted rgba(165, 165, 165, 0.5); border-bottom: 1px dotted rgba(165, 165, 165, 0.5); margin: 20px 0 0 0; }
 
 .borderGray_left { border-left: 1px dotted rgba(165, 165, 165, 0.5); }
 @media screen and (max-width: 449px) and (min-width: 0) { .borderGray_left { border-left: 0; } }
 
+.borderGray_right { border-right: 1px dotted rgba(165, 165, 165, 0.5); }
+@media screen and (max-width: 449px) and (min-width: 0) { .borderGray_right { border-right: 0; } }
+
+.borderBrightblue { border: 1px solid #2f31e5; }
+
 .borderBlue { border: 1px solid #092058; }
+
+.borderGray { border: 1px solid rgba(165, 165, 165, 0.5); }
 
 .m_border { display: none; }
 @media screen and (max-width: 449px) and (min-width: 0) { .m_border { display: inline-block; width: calc(100% - 20px * 2); height: 1px; border-top: 1px dotted rgba(165, 165, 165, 0.5); margin: 30px 20px; } }
+
+.m_border_all { display: none; }
+@media screen and (max-width: 449px) and (min-width: 0) { .m_border_all { display: inline-block; width: 100%; height: 1px; border-top: 1px dotted rgba(165, 165, 165, 0.5); margin: 10px 0; } }
