--- a/scss/icon.scss
+++ b/scss/icon.scss
@@ -22,6 +22,7 @@
   font-variant: normal;
 }
 
+.icon-bubble_chart---material:before { content: "\e91f"; }
 .icon-email:before { content: "\e900"; }
 .icon-instagram:before { content: "\e901"; }
 .icon-snapchat:before { content: "\e90b"; }
@@ -54,4 +55,5 @@
 .icon-chevron-right:before { content: "\e906"; }
 .icon-menu:before { content: "\e907"; }
 .icon-plus:before { content: "\e908"; }
+.icon-search:before { content: "\e920"; }
 .icon-x:before { content: "\e909"; }
