--- a/css/link.css
+++ b/css/link.css
@@ -24,6 +24,7 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 .link_gray { cursor: not-allowed; color: white; background-color: rgba(165, 165, 165, 0.5); }
 
 .web_menu { color: #092058; font-size: 1rem; font-weight: 400; line-height: 37px; }
+.web_menu.web_a { text-decoration: underline; color: #2f31e5; }
 .web_menu:hover { text-decoration: underline; color: #2f31e5; }
 .web_menu:nth-child(3) { margin-right: 25px; }
 .web_menu:nth-child(3):after { display: none; }
@@ -47,6 +48,8 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 
 .link_icon { width: 30px; height: 30px; background-color: transparent; border: 1px solid #2f31e5; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; color: #2f31e5; font-size: 1rem; line-height: 28px; float: right; text-align: center; margin-top: -5px; }
 .link_icon.link_iocn_gray { color: #a5a5a5; border: 1px solid #a5a5a5; }
+.link_icon.link_icon_save { width: auto; height: auto; padding: 0 15px; }
+.link_icon.link_icon_search { width: 40px; height: 40px; margin-top: 0; font-size: 1.4rem; line-height: 38px; }
 
 .no_event_icon { color: #a5a5a5; border: 1px solid #a5a5a5; pointer-events: none; cursor: default; }
 
@@ -56,8 +59,12 @@ button { display: inline-block; outline: 0; cursor: pointer; }
 .btn_status_box.c_green { color: #6db53a; }
 .btn_status_box.c_gray { color: #a5a5a5; }
 .btn_status_box.c_gray.member:hover { color: #ff9800; }
+.btn_status_box.c_blue { color: rgba(9, 32, 88, 0.8); }
+.btn_status_box.c_blue_po { position: absolute; bottom: 0; right: 0; }
 
 .btn_add { width: 40px; height: 40px; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 36px; text-align: center; background-color: transparent; border: 1px solid #2f31e5; color: #2f31e5; font-size: 1.4rem; }
 
-.btn_done { display: inline-block; font-size: 1.2rem; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; background-color: #092058; color: white; padding: 8px 15px; float: right; cursor: pointer; border: 0; }
+.no_event_btn { color: #a5a5a5; border: 1px solid #a5a5a5; pointer-events: none; cursor: default; }
+
+.btn_done { display: inline-block; font-size: 1.2rem; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; background-color: #092058; color: white; padding: 8px 15px; float: right; cursor: pointer; border: 0; line-height: 28px; }
 @media screen and (max-width: 449px) and (min-width: 0) { .btn_done { font-size: 1rem; } }
