--- a/css/public.css
+++ b/css/public.css
@@ -20,6 +20,7 @@ body.bg_color_p { /* Permalink - use to edit and share this gradient: https://co
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box header .m_Hamburg { display: inline-block; float: right; width: 30px; height: 30px; color: #092058; font-size: 1.6rem; margin-top: 6px; } }
 .page_boxs .page_box main .cent_boxs { display: inline-block; width: 100%; background-color: white; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; -moz-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); padding: 35px 0; *zoom: 1; }
 .page_boxs .page_box main .cent_boxs:after { display: table; content: ""; line-height: 0; clear: both; }
+.page_boxs .page_box main .cent_boxs.cent_web { display: inline-block; margin-bottom: 20px; padding: 20px 0; }
 .page_boxs .page_box main .cent_boxs.cent_mobile { display: none; }
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box main .cent_boxs.cent_mobile { display: inline-block; margin-bottom: 20px; padding: 20px 0; } }
 .page_boxs .page_box footer { *zoom: 1; margin: 20px 0; text-align: left; }
