--- a/css/type.css
+++ b/css/type.css
@@ -21,11 +21,16 @@ p { display: inline-block; padding: 0; margin: 0; }
 
 .note_type { display: inline-block; color: #092058; font-size: 1rem; }
 @media screen and (max-width: 449px) and (min-width: 0) { .note_type { font-size: .9rem; } }
+.note_type.note_gray { color: rgba(165, 165, 165, 0.5); }
 
 .lineHeight45 { line-height: 45px; }
 
 .team_type { display: inline-block; width: 100%; color: #092058; font-size: 1.2rem; font-weight: 400; }
 @media screen and (max-width: 449px) and (min-width: 0) { .team_type { font-size: 1rem; } }
+
+.link_title { display: inline-block; color: #092058; font-size: 1.2rem; font-weight: 700; padding-bottom: 5px; }
+.link_title.link_title_gray { color: rgba(165, 165, 165, 0.5); }
+.link_title.link100 { width: 100%; }
 
 .bright_type13 { color: #2f31e5; font-size: 1.2rem; font-weight: 500; }
 
@@ -33,17 +38,24 @@ p { display: inline-block; padding: 0; margin: 0; }
 
 .type_data_title { font-size: 1.4rem; font-weight: 700; color: #2f31e5; }
 
+.link_code { font-size: 2.8rem; font-weight: 900; color: #858ea6; }
+
 input { outline: 0; background-color: transparent; }
 
 .toEnter { display: inline-block; width: 100%; padding: 8px 15px; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; overflow: hidden; }
+.toEnter.networklink { font-size: 1rem; padding: 12px 0 0 10px; width: calc(100% - 50px); }
+.toEnter.on_net01 { border: 0; }
 
 .inEnter { display: inline-block; width: calc(100% - 50px * 2); padding: 8px 15px 8px 0; border: 0; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; overflow: hidden; }
 .inEnter.in_all { width: calc(100% - 70px); padding: 0; line-height: 40px; }
 
-.addEnter { color: #d2d2d2; font-weight: 400; }
+.addEnter { color: #a5a5a5; font-weight: 400; }
+.addEnter.addEnter2 { color: rgba(165, 165, 165, 0.5); pointer-events: none; cursor: default; }
 
-.input_box { display: inline-block; width: 100%; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; margin-bottom: 18px; }
+.input_box { display: inline-block; width: 100%; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; margin-bottom: 18px; position: relative; }
 .input_box.input_box_top15 { margin-top: 15px; margin-bottom: 5px; }
+.input_box.input_search { width: calc(100% - 50px); }
+.input_box.input_search90 { width: calc(100% - 90px); }
 
 .social_box { display: inline-block; width: 40px; height: 40px; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 40px; text-align: center; background-color: #092058; border: 1px solid #092058; margin-right: 9px; color: white; font-size: 1.2rem; }
 .social_box.member_box { background-color: #858ea6; border: 1px solid #858ea6; }
@@ -72,3 +84,6 @@ input { outline: 0; background-color: transparent; }
 
 .m_border_all { display: none; }
 @media screen and (max-width: 449px) and (min-width: 0) { .m_border_all { display: inline-block; width: 100%; height: 1px; border-top: 1px dotted rgba(165, 165, 165, 0.5); margin: 10px 0; } }
+
+.m_border_all2 { display: none; }
+@media screen and (max-width: 449px) and (min-width: 0) { .m_border_all2 { display: inline-block; width: 100%; height: 1px; border-top: 1px dotted rgba(165, 165, 165, 0.5); margin: 15px 0; } }
