--- a/scss/type.scss
+++ b/scss/type.scss
@@ -77,6 +77,10 @@ p {
   @include range-width(0, 450px) {
     font-size: .9rem;
   }
+
+  &.note_gray {
+    color: $gray2;
+  }
 }
 
 .lineHeight45 {
@@ -92,6 +96,23 @@ p {
 
   @include range-width(0, 450px) {
     font-size: 1rem;
+  }
+}
+
+.link_title {
+  display: inline-block;
+  // width: 100%;
+  color: $deep_blue;
+  font-size: 1.2rem;
+  font-weight: 700;
+  padding-bottom: 5px;
+
+  &.link_title_gray {
+    color: $gray2;
+  }
+
+  &.link100 {
+    width: 100%;
   }
 }
 
@@ -112,6 +133,12 @@ p {
 }
 
 
+.link_code {
+  font-size: 2.8rem;
+  font-weight: 900;
+  color: $deep_blue3;
+}
+
 
 // 輸入框相關
 input {
@@ -131,6 +158,17 @@ input {
   text-align: left;
 
   overflow: hidden;
+
+  &.networklink {
+    font-size: 1rem;
+    padding: 12px 0 0 10px;
+    width: calc(100% - 50px);
+    // line-height: 30px;
+  }
+
+  &.on_net01 {
+    border: 0;
+  }
 }
 
 .inEnter {
@@ -154,8 +192,14 @@ input {
 }
 
 .addEnter {
-  color: rgba(210, 210, 210, 1.00);
+  color: $gray;
   font-weight: 400;
+
+  &.addEnter2 {
+    color: $gray2;
+    pointer-events: none;
+    cursor: default;
+  }
 }
 
 .input_box {
@@ -164,9 +208,19 @@ input {
   @include border-radius(30px);
   margin-bottom: 18px;
 
+  position: relative;
+
   &.input_box_top15 {
     margin-top: 15px;
     margin-bottom: 5px;
+  }
+
+  &.input_search {
+    width: calc(100% - 50px);
+  }
+
+  &.input_search90 {
+    width: calc(100% - 90px);
   }
 }
 .social_box {
@@ -261,6 +315,18 @@ input {
     height: 1px;
     border-top: 1px dotted rgba(165, 165, 165, .5); 
     margin: 10px 0;
+  }
+}
+
+.m_border_all2 {
+  display: none;
+
+  @include range-width(0, 450px) {
+    display: inline-block;
+    width: 100%;
+    height: 1px;
+    border-top: 1px dotted rgba(165, 165, 165, .5); 
+    margin: 15px 0;
   }
 }
 
