--- a/css/type.css
+++ b/css/type.css
@@ -37,6 +37,7 @@ p { display: inline-block; padding: 0; margin: 0; }
 .type_uppercase { text-transform: uppercase; }
 
 .type_data_title { font-size: 1.4rem; font-weight: 700; color: #2f31e5; }
+.type_data_title.type_data_gray { color: rgba(165, 165, 165, 0.5); }
 
 .link_code { font-size: 2.8rem; font-weight: 900; color: #858ea6; }
 
